--- a/styles/index.scss
+++ b/styles/index.scss
@@ -13,6 +13,7 @@ body {
     bottom: 0;
     opacity: 0.06;
     background-size: cover;
+    z-index: -1;
 }
 header .navbar-expand-lg .navbar-collapse {
   justify-content: flex-end;
