--- a/styles/Cabine.scss
+++ b/styles/Cabine.scss
@@ -1,126 +1,131 @@
-.valeur-area {
-  max-width: 800px;
-
-  p {
-    font-size: 19px !important;
-   
-    color: #595959;
-    font-weight: 500;
-    svg {
-      color: #ff9191;
-      font-size: 30px;
-      margin-right: 7px;
-    }
-  }
-}
-.m-auto{
-  margin: auto;
-}
-.valeur-area {
-
-  .exp-single {
-      position: relative;
-      padding-bottom: 15px;
-    display: flex;
-    .exp-title {
-      border-bottom: 1px solid #abababa8;
-    padding-bottom: 10px;
-      width: 100%;
-      font-size: 20px !important;
-
-      .year {
-          align-items: center;
-        display: flex;
-      }
-      span {
-        font-size: 16px;
-        font-weight: 500;
-        color: #ababab;
-      }
-      p {
-        margin: 0 !important;
-      }
-      b {
-        margin-left: auto;
-        font-size: 18px;
-        text-align: right;
-        color: #868686;
-      
-      }
-    }
+.__Cabinet{
+  .valeur-area {
+    max-width: 800px;
   
-    svg {
+    p {
+      font-size: 19px !important;
+     
+      color: #595959;
+      font-weight: 500;
+      svg {
         color: #ff9191;
         font-size: 30px;
-        margin-right: 15px;
-        position: relative;
-        background: white;
-        border-radius: 54%;
-        z-index: 1;
-    }
-  .line{
-    position: absolute;
-    height: 100%;
-    width: 3px;
-    background: #ff9191;
-    left: 12px;
-    top: 2px;
-    }
-  }
-}
-
-.exp-single:last-child{
-  .exp-title{
-
-    border-bottom: 0px !important;
-  }
- }
-.why-choose-img{
- max-width: 300px;
-  overflow: hidden;
-  border-radius: 30px;
- position: relative;
-}
-
- 
-.img-trans::before{
-  background: rgba(0, 0, 0, 0.1);
-  position: absolute;
-  right: 0;
-  top: 0;
-  width: 0;
-  height: 0;
-  -webkit-transition: all 0.3s ease-out 0s;
-  -o-transition: all 0.3s ease-out 0s;
-  transition: all 0.3s ease-out 0s;
-  z-index: 1;
-  content: "";
-  border-radius: 20px;
-}
-.img-trans:hover:before {
-  width: 100%;
-  height: 100%;
-}
-
-.relative{
-  background: white;
-    position: relative;
-    z-index: 1;
-}
-
-
-@media (max-width: 600px){
-  .valeur-area .exp-single .exp-title  {
-    b{
-
-      font-size: 16px;
-    }
-    .year{
-      span{
-        display: none;
+        margin-right: 7px;
       }
     }
+  }
+  .m-auto{
+    margin: auto;
+  }
+  .valeur-area {
+    padding-left: 10px;
+    padding-right: 10px;
+    margin: auto;
+    .exp-single {
+        position: relative;
+        padding-bottom: 15px;
+      display: flex;
+      .exp-title {
+        border-bottom: 1px solid #abababa8;
+      padding-bottom: 10px;
+        width: 100%;
+        font-size: 20px !important;
+  
+        .year {
+            align-items: center;
+          display: flex;
+        }
+        span {
+          font-size: 16px;
+          font-weight: 500;
+          color: #ababab;
+        }
+        p {
+          margin: 0 !important;
+        }
+        .annee {
+          margin-left: auto !important;
+          font-size: 17px !important;
+          text-align: right;
+          font-weight: 700 !important;
+          color: #606060;      
+        }
+      }
+    
+      svg {
+          color: #ff9191;
+          font-size: 30px;
+          margin-right: 15px;
+          position: relative;
+          background: white;
+          border-radius: 54%;
+          z-index: 1;
+      }
+    .line{
+      position: absolute;
+      height: 100%;
+      width: 3px;
+      background: #ff9191;
+      left: 12px;
+      top: 2px;
+      }
+    }
+  }
+  
+  .exp-single:last-child{
+    .exp-title{
+  
+      border-bottom: 0px !important;
+    }
+   }
+  .why-choose-img{
+   max-width: 300px;
+   max-height: 500px;
+    overflow: hidden;
+    border-radius: 30px;
+   position: relative;
+  }
+  
    
-}
-
+  .img-trans::before{
+    background: rgba(0, 0, 0, 0.1);
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 0;
+    height: 0;
+    -webkit-transition: all 0.3s ease-out 0s;
+    -o-transition: all 0.3s ease-out 0s;
+    transition: all 0.3s ease-out 0s;
+    z-index: 1;
+    content: "";
+    border-radius: 20px;
+  }
+  .img-trans:hover:before {
+    width: 100%;
+    height: 100%;
+  }
+  
+  .relative{
+    background: white;
+      position: relative;
+      z-index: 1;
+  }
+  
+  
+  @media (max-width: 600px){
+    .valeur-area .exp-single .exp-title  {
+      b{
+  
+        font-size: 16px;
+      }
+      .year{
+        span{
+          display: none;
+        }
+      }
+     
+  }
+  
+  }
 }
